Fix crashes in various GObject signal handler functions

Fix crashes in a large amount of signal handler functions exposed
on the GObject module. This is possible now that the underlying
GObject pointer is exposed to Python as a PyCapsule which marshaling
can handle. The following functions in the GObject module have been
verified:

signal_handler_unblock
signal_handler_disconnect
signal_handler_is_connected
signal_stop_emission
signal_stop_emission_by_name
signal_has_handler_pending
signal_connect_closure
signal_connect_closure_by_id
signal_handler_find
signal_handlers_destroy

https://bugzilla.gnome.org/show_bug.cgi?id=633927